--- a/Tools/tool.ipynb
+++ b/Tools/tool.ipynb
@@ -321,17 +321,15 @@
    "cell_type": "markdown",
    "id": "0d5eeb73",
    "metadata": {},
-   "source": []
+   "source": [
+    "check this out\n",
+    "\n",
+    "https://g.co/gemini/share/d03a57545c22"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "59b16bd4",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "802660d5",
    "metadata": {},
    "source": []
   },
